--- a/index.html
+++ b/index.html
@@ -1,60 +1,97 @@
 ﻿<!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="chrome=1" />
+		<meta name="description" content="openseadragon-imaging : " />
 
-<head>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			media="screen"
+			href="content/style/stylesheet.css"
+		/>
 
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="openseadragon-imaging : " />
+		<title>OpenSeadragon Imaging</title>
+	</head>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="content/style/stylesheet.css">
+	<body>
+		<div id="header_wrap" class="outer">
+			<header class="inner">
+				<a
+					id="forkme_banner"
+					href="https://github.com/openseadragon-imaging/openseadragon-imaging"
+					>View on GitHub</a
+				>
+				<h1 id="project_title">OpenSeadragon Imaging</h1>
+				<h2 id="project_tagline">
+					Imaging Tools for
+					<a href="http://openseadragon.github.io/" class=""
+						>OpenSeadragon</a
+					>
+				</h2>
+			</header>
+		</div>
 
-    <title>OpenSeadragon Imaging</title>
+		<div id="main_content_wrap" class="outer">
+			<section id="main_content" class="inner">
+				<h3>
+					<a
+						name="openseadragon-imaging-demo"
+						class="anchor"
+						href="#openseadragon-imaging-demo"
+						><span class="octicon octicon-link"></span></a
+					>Demos
+				</h3>
 
-</head>
+				<ul>
+					<li>
+						<a href="./demo/index.html" class=""
+							>OpenSeadragon Imaging Demo</a
+						>
+					</li>
+				</ul>
 
-<body>
+				<h3>
+					<a
+						name="openseadragon-imaging-discuss"
+						class="anchor"
+						href="#openseadragon-imaging-discuss"
+						><span class="octicon octicon-link"></span></a
+					>Forums
+				</h3>
 
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-            <a id="forkme_banner" href="https://github.com/openseadragon-imaging/openseadragon-imaging">View on GitHub</a>
-            <h1 id="project_title">OpenSeadragon Imaging</h1>
-            <h2 id="project_tagline">Imaging Tools for <a href="http://openseadragon.github.io/" class="">OpenSeadragon</a></h2>
-        </header>
-    </div>
+				<ul>
+					<li>
+						<a
+							href="https://gitter.im/openseadragon-imaging/community/"
+							class=""
+							>OpenSeadragon Imaging on Gitter</a
+						>
+					</li>
+				</ul>
 
-    <div id="main_content_wrap" class="outer">
-        <section id="main_content" class="inner">
-			<h3><a name="openseadragon-imaging-demo" class="anchor" href="#openseadragon-imaging-demo"><span class=" octicon octicon-link"></span></a>Demos</h3>
+				<h3>
+					<a
+						name="openseadragon-links"
+						class="anchor"
+						href="#openseadragon-links"
+						><span class="octicon octicon-link"></span></a
+					>Links
+				</h3>
 
-            <p>
-                <ul>
-                    <li><a href="./demo/index.html" class="">OpenSeadragon Imaging Demo</a></li>
-                </ul>
-            </p>
+				<ul>
+					<li>
+						<a href="http://openseadragon.github.io/" class=""
+							>OpenSeadragon</a
+						>
+					</li>
+				</ul>
+			</section>
+		</div>
 
-			<h3><a name="openseadragon-imaging-discuss" class="anchor" href="#openseadragon-imaging-discuss"><span class=" octicon octicon-link"></span></a>Forums</h3>
-
-            <p>
-                <ul>
-                    <li><a href="https://gitter.im/openseadragon-imaging/community/" class="">OpenSeadragon Imaging on Gitter</a></li>
-                </ul>
-            </p>
-
-			<h3><a name="openseadragon-links" class="anchor" href="#openseadragon-links"><span class=" octicon octicon-link"></span></a>Links</h3>
-
-            <p>
-                <ul>
-                    <li><a href="http://openseadragon.github.io/" class="">OpenSeadragon</a></li>
-                </ul>
-            </p>
-        </section>
-    </div>
-
-    <div id="footer_wrap" class="outer">
-        <footer class="inner">
-        </footer>
-    </div>
-
-</body>
+		<div id="footer_wrap" class="outer">
+			<footer class="inner"></footer>
+		</div>
+	</body>
 </html>
