Site link updates

--- a/old-site/index.html
+++ b/old-site/index.html
@@ -26,7 +26,7 @@
 				<h1 id="project_title">OpenSeadragon Imaging</h1>
 				<h2 id="project_tagline">
 					Imaging Tools for
-					<a href="http://openseadragon.github.io/" class=""
+					<a href="https://openseadragon.github.io/" class=""
 						>OpenSeadragon</a
 					>
 				</h2>
@@ -46,7 +46,7 @@
 
 				<ul>
 					<li>
-						<a href="./old-demo/index.html" class=""
+						<a href="../old-demo/index.html" class=""
 							>OpenSeadragon Imaging Demo</a
 						>
 					</li>
@@ -82,7 +82,7 @@
 
 				<ul>
 					<li>
-						<a href="http://openseadragon.github.io/" class=""
+						<a href="https://openseadragon.github.io/" class=""
 							>OpenSeadragon</a
 						>
 					</li>
